// messages definition for issuing node commands and receiving the
// corresponding responses
package command;

syntax="proto3";

// Full state response
message FullStateResponse {
  // Describes the nodes that have subscribed to a given realtime room
  message NodeSubscribers {
    string nodeId = 1;
    uint64 subscribers = 2;
    uint64 lastMessageId = 3;
  }

  // Describes a realtime room
  message RealtimeRoom {
    string roomId = 1;
    // array of polymorphic objects, needs to be stringified beforehand
    string filters = 2;

    repeated NodeSubscribers nodes = 3;
  }

  repeated RealtimeRoom rooms = 1;
}

// Handshake Request
message HandshakeRequest {
  string nodeId = 1;
  uint64 lastMessageId = 2;
  string ip = 3;
}

// Handshake response
message HandshakeResponse {
  bool added = 1;
  uint64 lastMessageId = 2;
}
